--- a/src/View/Login.fxml
+++ b/src/View/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -58,26 +59,34 @@
                   <Insets left="200.0" right="200.0" />
                </VBox.margin>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
+                  <Hyperlink fx:id="resetBt" onAction="#resetPassword" text="forget Password?">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="315.0" />
+                     </VBox.margin>
+                  </Hyperlink>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dont have an account? join us now ">
-                     <HBox.margin>
-                        <Insets left="200.0" top="10.0" />
-                     </HBox.margin>
                      <font>
                         <Font name="System Italic" size="13.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="230.0" top="30.0" />
+                     </VBox.margin>
                   </Text>
                   <Button fx:id="signupBt" mnemonicParsing="false" onAction="#signup" prefHeight="31.0" prefWidth="95.0" styleClass="list-cell" stylesheets="@application.css" text="Sign up">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets top="10.0" />
-                     </HBox.margin>
+                     <VBox.margin>
+                        <Insets left="280.0" />
+                     </VBox.margin>
                   </Button>
                </children>
-            </HBox>
+            </VBox>
          </children>
       </VBox>
    </center>
