--- a/src/View/QuestionMangement.fxml
+++ b/src/View/QuestionMangement.fxml
@@ -40,13 +40,16 @@
                         <Insets bottom="-11.0" left="-5.0" top="-11.0" />
                      </padding>
                   </Button>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="252.0" text=" Q U E S T I O N S   " textAlignment="CENTER" textFill="#1b5e20" textOverrun="CLIP" wrapText="true">
+                     <font>
+                        <Font name="Times New Roman Bold" size="30.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="250.0" />
+                     </HBox.margin>
+                  </Label>
                </children>
             </HBox>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="252.0" text=" Q U E S T I O N S   " textAlignment="CENTER" textFill="#1b5e20" textOverrun="CLIP" wrapText="true">
-               <font>
-                  <Font name="Times New Roman Bold" size="30.0" />
-               </font>
-            </Label>
             <Separator prefHeight="23.0" prefWidth="889.0" styleClass="list-cell" stylesheets="@application.css">
                <VBox.margin>
                   <Insets />
@@ -54,7 +57,7 @@
             </Separator>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <ComboBox fx:id="diffSelect" nodeOrientation="LEFT_TO_RIGHT" prefHeight="46.0" prefWidth="200.0" promptText="All Questions" stylesheets="@application.css">
+                  <ComboBox fx:id="diffSelect" nodeOrientation="LEFT_TO_RIGHT" prefHeight="39.0" prefWidth="200.0" promptText="All Questions" stylesheets="@application.css">
                      <styleClass>
                         <String fx:value="Feild" />
                         <String fx:value="list-cell" />
