--- a/src/View/QuestionPopup.fxml
+++ b/src/View/QuestionPopup.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
@@ -12,31 +11,31 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.64" prefHeight="513.0" prefWidth="548.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.QuestionPopupController">
    <children>
-      <VBox layoutX="34.0" layoutY="183.0" prefHeight="278.0" prefWidth="499.0">
+      <VBox layoutX="34.0" layoutY="153.0" prefHeight="308.0" prefWidth="499.0">
          <children>
-            <RadioButton fx:id="firstAnswer" mnemonicParsing="false" prefHeight="25.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">
+            <RadioButton fx:id="firstAnswer" mnemonicParsing="false" prefHeight="86.0" prefWidth="499.0" selected="false" stylesheets="@application.css" text="Answer 1 " wrapText="true">
                <font>
                   <Font size="16.0" />
                </font></RadioButton>
-            <RadioButton fx:id="secondAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">>
+            <RadioButton fx:id="secondAnswer" mnemonicParsing="false" prefHeight="86.0" prefWidth="499.0" selected="false" stylesheets="@application.css" text="Answer 2" wrapText="true">>
                <VBox.margin>
-                  <Insets top="50.0" />
+                  <Insets top="30.0" />
                </VBox.margin>
                <font>
                   <Font size="16.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="thirdAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">>
+            <RadioButton fx:id="thirdAnswer" mnemonicParsing="false" prefHeight="86.0" prefWidth="499.0" selected="false" stylesheets="@application.css" text="Answer 3 " wrapText="true">>
                <VBox.margin>
-                  <Insets top="50.0" />
+                  <Insets top="30.0" />
                </VBox.margin>
                <font>
                   <Font size="16.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="forthAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">>
+            <RadioButton fx:id="forthAnswer" mnemonicParsing="false" prefHeight="86.0" prefWidth="499.0" selected="false" stylesheets="@application.css" text="Answer 4" wrapText="true">>
                <VBox.margin>
-                  <Insets top="50.0" />
+                  <Insets top="30.0" />
                </VBox.margin>
                <font>
                   <Font size="16.0" />
@@ -44,18 +43,14 @@
             </RadioButton>
          </children>
       </VBox>
-      <Button fx:id="checkAnswerBt" layoutX="382.0" layoutY="469.0" mnemonicParsing="false" onAction="#checkAnswer" prefHeight="31.0" prefWidth="146.0" stylesheets="@application.css" text="Check Answer">
+      <Button fx:id="checkAnswerBt" layoutX="382.0" layoutY="469.0" mnemonicParsing="false" onAction="#checkAnswer" prefHeight="31.0" prefWidth="146.0" styleClass="list-cell" stylesheets="@application.css" text="Check Answer">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
-         <styleClass>
-            <String fx:value="list-cell" />
-            <String fx:value="Feild" />
-         </styleClass>
       </Button>
-      <Pane fx:id="questionPane" layoutX="34.0" layoutY="39.0" prefHeight="119.0" prefWidth="499.0">
+      <Pane fx:id="questionPane" layoutX="34.0" layoutY="39.0" prefHeight="107.0" prefWidth="499.0">
          <children>
-            <Text fx:id="questionText" layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Question" wrappingWidth="499.20000000000016">
+            <Text fx:id="questionText" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Question" wrappingWidth="499.20000000000016">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
