--- a/src/View/YouWinWindow.fxml
+++ b/src/View/YouWinWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.YouWinCtr">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.YouWinCtr">
    <children>
       <ImageView fitHeight="159.0" fitWidth="215.0" layoutX="163.0" layoutY="192.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="170.0">
          <image>
@@ -37,7 +38,7 @@
          <center>
             <Label text="Your Score " textFill="#673ab7" BorderPane.alignment="CENTER">
                <BorderPane.margin>
-                  <Insets top="-50.0" />
+                  <Insets bottom="70.0" left="110.0" />
                </BorderPane.margin>
                <font>
                   <Font name="System Bold" size="48.0" />
@@ -57,12 +58,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.42997798323631287" green="0.14958305656909943" blue="0.5701754093170166" />
+                              <Color blue="0.5701754093170166" green="0.14958305656909943" red="0.42997798323631287" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.3199999928474426" green="0.11840000003576279" blue="0.11840000003576279" />
+                              <Color blue="0.11840000003576279" green="0.11840000003576279" red="0.3199999928474426" />
                            </color>
                         </Stop>
                      </stops>
@@ -70,6 +71,13 @@
                </fill>
             </Text>
          </bottom>
+         <right>
+            <Button fx:id="backBt" mnemonicParsing="false" text="Back to Main" textFill="#661b60" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets right="20.0" top="350.0" />
+               </BorderPane.margin>
+            </Button>
+         </right>
       </BorderPane>
    </children>
 </AnchorPane>
