--- a/src/View/MainMenu.fxml
+++ b/src/View/MainMenu.fxml
@@ -11,8 +11,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="715.0" prefWidth="889.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="715.0" prefWidth="889.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
    <children>
+      <ImageView fitHeight="715.0" fitWidth="896.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Vector2.png" />
+         </image>
+      </ImageView>
       <HBox alignment="CENTER" layoutX="174.0" layoutY="256.0" prefHeight="170.0" prefWidth="526.0" stylesheets="@application.css">
          <children>
             <Button fx:id="startBt" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#startGame" prefHeight="123.0" prefWidth="138.0" text="Start Game" textAlignment="CENTER" wrapText="true">
@@ -104,5 +109,10 @@
          </graphic>
       </Button>
       <Button fx:id="ask1" layoutX="824.0" layoutY="28.0" mnemonicParsing="false" onAction="#onText2" prefHeight="25.0" prefWidth="31.0" style="-fx-background-color: transparent;" />
+      <Text fx:id="helloUser" layoutX="-2.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="895.6708984375" AnchorPane.bottomAnchor="581.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0">
+         <font>
+            <Font name="Times New Roman Bold Italic" size="35.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
