--- a/src/View/EditQuestion.fxml
+++ b/src/View/EditQuestion.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EditQuestionController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" style="-fx-background-color: #e8f5e9;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EditQuestionController">
    <top>
       <VBox prefHeight="41.0" prefWidth="870.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;">
                <children>
                   <Button fx:id="back" mnemonicParsing="false" onAction="#actionOnBack" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: transparent;" stylesheets="@application.css">
                      <graphic>
@@ -54,14 +54,30 @@
    <left>
       <VBox prefHeight="584.0" prefWidth="651.0" BorderPane.alignment="CENTER">
          <children>
+            <Label text="Question:" textFill="#1b5e20">
+               <font>
+                  <Font name="Times New Roman Bold" size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin>
+            </Label>
             <TextArea fx:id="qtext" prefHeight="110.0" prefWidth="591.0" promptText="Please enter the Question Text.." styleClass="Feild" stylesheets="@application.css">
                <VBox.margin>
-                  <Insets left="20.0" top="30.0" />
+                  <Insets left="20.0" />
                </VBox.margin>
             </TextArea>
+            <Label text="Answers:" textFill="#1b5e20">
+               <font>
+                  <Font name="Times New Roman Bold" size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin>
+            </Label>
             <TextArea fx:id="firstAnswer" prefHeight="61.0" prefWidth="631.0" promptText="First Answer..." styleClass="Feild" stylesheets="@application.css">
                <VBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets left="20.0" top="10.0" />
                </VBox.margin>
             </TextArea>
             <TextArea fx:id="secondAnswer" prefHeight="62.0" prefWidth="631.0" promptText="Second Answer..." styleClass="Feild" stylesheets="@application.css">
