--- a/src/View/HistoryGames.fxml
+++ b/src/View/HistoryGames.fxml
@@ -9,44 +9,20 @@
 <?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="611.0" prefWidth="736.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GamesHistoryCtrl">
-   <top>
-      <VBox prefHeight="71.0" prefWidth="696.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="31.0" prefWidth="696.0">
-               <children>
-                  <Button fx:id="back" mnemonicParsing="false" onAction="#actionOnBack" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: transparent;" stylesheets="@application.css">
-                     <graphic>
-                        <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/back.png" />
-                           </image>
-                        </ImageView>
-                     </graphic></Button>
-                  <Label prefHeight="27.0" prefWidth="354.0" text="G A M E S   H I S T O R Y" textAlignment="CENTER" textFill="#1b5e20" textOverrun="CLIP" wrapText="true">
-                     <font>
-                        <Font name="Times New Roman Bold" size="30.0" />
-                     </font>
-                     <effect>
-                        <Reflection fraction="1.0" topOpacity="0.0" />
-                     </effect>
-                     <HBox.margin>
-                        <Insets left="150.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-            <Separator prefHeight="14.0" prefWidth="742.0" styleClass="list-cell" stylesheets="@application.css" />
-         </children>
-      </VBox>
-   </top>
-   <center>
-      <VBox prefHeight="465.0" prefWidth="736.0" BorderPane.alignment="CENTER">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GamesHistoryCtrl">
+   <children>
+      <ImageView fitHeight="628.0" fitWidth="736.0" layoutX="-5.0" layoutY="-6.0" opacity="0.77" pickOnBounds="true" smooth="false">
+         <image>
+            <Image url="@../images/dbg.png" />
+         </image>
+      </ImageView>
+      <VBox layoutY="85.0" prefHeight="535.0" prefWidth="736.0">
          <children>
             <HBox prefHeight="106.0" prefWidth="736.0">
                <children>
@@ -77,7 +53,8 @@
                         <ImageView fitHeight="47.0" fitWidth="54.0" pickOnBounds="true">
                            <image>
                               <Image url="@../images/strategy%20(1).png" />
-                           </image></ImageView>
+                           </image>
+                        </ImageView>
                      </graphic>
                      <tooltip>
                         <Tooltip text="my games history">
@@ -95,7 +72,89 @@
                   </Button>
                </children>
             </HBox>
-            <HBox prefHeight="33.0" prefWidth="736.0">
+         </children>
+      </VBox>
+      <HBox prefHeight="34.0" prefWidth="727.0" style="-fx-background-color: white;">
+         <children>
+            <Button fx:id="back" mnemonicParsing="false" onAction="#actionOnBack" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: transparent;" stylesheets="@application.css">
+               <graphic>
+                  <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/back.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Label prefHeight="27.0" prefWidth="354.0" text="G A M E S   H I S T O R Y" textAlignment="CENTER" textFill="#1b5e20" textOverrun="CLIP" wrapText="true">
+               <font>
+                  <Font name="Times New Roman Bold" size="30.0" />
+               </font>
+               <effect>
+                  <Reflection fraction="1.0" topOpacity="0.0" />
+               </effect>
+               <HBox.margin>
+                  <Insets left="150.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
+      <Separator layoutY="33.0" prefHeight="0.0" prefWidth="727.0" stylesheets="@application.css" />
+      <Pane fx:id="meall" layoutX="-5.0" layoutY="168.0" prefHeight="433.0" prefWidth="714.0">
+         <children>
+            <ListView fx:id="gamesList" layoutX="144.0" layoutY="17.0" opacity="0.85" prefHeight="374.0" prefWidth="467.0" style="-fx-border-color: #a8a8a8; -fx-background-color: #ffffff67;" styleClass="list-cell" stylesheets="@application.css" />
+            <VBox layoutX="100.0" layoutY="17.0" prefHeight="374.0" prefWidth="44.0">
+               <children>
+                  <ImageView fx:id="first" fitHeight="35.0" fitWidth="40.0" pickOnBounds="true">
+                     <image>
+                        <Image url="@../images/firstPlace.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="second" fitHeight="30.0" fitWidth="39.0" pickOnBounds="true">
+                     <image>
+                        <Image url="@../images/second.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="third" fitHeight="32.0" fitWidth="38.0" pickOnBounds="true">
+                     <image>
+                        <Image url="@../images/third.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </VBox>
+            <HBox layoutX="53.0" prefHeight="33.0" prefWidth="633.0">
+               <children>
+                  <Label prefHeight="20.0" prefWidth="70.0" text="Username">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="100.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="hightScoreLabel" prefHeight="20.0" prefWidth="82.0" text="Hight Score">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="300.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+         </children>
+      </Pane>
+      <Pane fx:id="me" layoutX="49.0" layoutY="169.0" prefHeight="412.0" prefWidth="687.0">
+         <children>
+            <HBox layoutX="46.0" layoutY="21.0" prefHeight="385.0" prefWidth="690.0">
+               <children>
+                  <ListView fx:id="melist" opacity="0.85" prefHeight="386.0" prefWidth="562.0" style="-fx-border-color: #a8a8a8; -fx-background-color: #ffffff67;" styleClass="list-cell" stylesheets="@application.css">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                  </ListView>
+               </children>
+            </HBox>
+            <HBox layoutX="9.0" prefHeight="33.0" prefWidth="699.0">
                <children>
                   <Label prefHeight="20.0" prefWidth="70.0" text="Username">
                      <font>
@@ -129,45 +188,9 @@
                         <Insets left="70.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="hightScoreLabel" prefHeight="20.0" prefWidth="82.0" text="Hight Score">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="70.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox prefHeight="380.0" prefWidth="736.0">
-               <children>
-                  <VBox prefHeight="380.0" prefWidth="46.0">
-                     <children>
-                        <ImageView fx:id="first" fitHeight="35.0" fitWidth="40.0" pickOnBounds="true">
-                           <image>
-                              <Image url="@../images/firstPlace.png" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="second" fitHeight="30.0" fitWidth="39.0" pickOnBounds="true">
-                           <image>
-                              <Image url="@../images/second.png" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="third" fitHeight="32.0" fitWidth="38.0" pickOnBounds="true">
-                           <image>
-                              <Image url="@../images/third.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </VBox>
-                  <ListView fx:id="gamesList" opacity="0.66" prefHeight="350.0" prefWidth="665.0" style="-fx-border-color: #a8a8a8; -fx-background-color: #ffffff67;" styleClass="list-cell" stylesheets="@application.css">
-                     <HBox.margin>
-                        <Insets bottom="30.0" right="30.0" />
-                     </HBox.margin>
-                  </ListView>
                </children>
             </HBox>
          </children>
-      </VBox>
-   </center>
-</BorderPane>
+      </Pane>
+   </children>
+</AnchorPane>
